# plot-pyre

./: .gitignore  HACKATHON_COMPLETION.md  HACKATHON_PLAN.md  README.md  main.py  pyproject.toml  requirements.txt
api/: main.py  requirements.txt
src/: ai_utils.py  educational.py  offline_utils.py  theme.py
