[project]
name = "plot-pyre"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.28.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pymongo>=4.13.2",
    "streamlit>=1.47.1",
]

[dependency-groups]
dev = ["ruff>=0.12.7"]
